parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON clase vars funcion main
Rule 2     main -> MAIN LPAR RPAR bloque
Rule 3     clase -> CLASS ID clase1 LCBRAC clase2 clase3 RCBRAC clase
Rule 4     clase -> e
Rule 5     clase1 -> LT INHERITS ID GT
Rule 6     clase1 -> e
Rule 7     clase2 -> ATTRIBUTES declaracion atributos asign
Rule 8     clase2 -> e
Rule 9     atributos -> declaracion atributos
Rule 10    atributos -> e
Rule 11    asign -> asignacion asign
Rule 12    asign -> e
Rule 13    clase3 -> METHODS funcion metodos
Rule 14    clase3 -> e
Rule 15    metodos -> funcion metodos
Rule 16    metodos -> e
Rule 17    vars -> VAR declaracion declaraciones
Rule 18    vars -> e
Rule 19    declaraciones -> declaracion declaraciones
Rule 20    declaraciones -> e
Rule 21    declaracion -> declaracion1 COLON declaracion5 SEMICOLON
Rule 22    declaracion1 -> ID declaracion2 declaracion4
Rule 23    declaracion2 -> LSBRAC CTEI RSBRAC declaracion3
Rule 24    declaracion2 -> e
Rule 25    declaracion3 -> LSBRAC CTEI RSBRAC
Rule 26    declaracion3 -> e
Rule 27    declaracion4 -> COMMA declaracion1
Rule 28    declaracion4 -> e
Rule 29    declaracion5 -> tipo
Rule 30    declaracion5 -> ID
Rule 31    funcion -> funcion1 FUNCTION ID LPAR funcion2 RPAR bloque funcion
Rule 32    funcion -> e
Rule 33    funcion1 -> tipo
Rule 34    funcion1 -> VOID
Rule 35    funcion2 -> ID COLON tipo funcion3
Rule 36    funcion2 -> e
Rule 37    funcion3 -> COMMA ID COLON tipo funcion3
Rule 38    funcion3 -> e
Rule 39    tipo -> INT
Rule 40    tipo -> FLOAT
Rule 41    tipo -> STRING
Rule 42    tipo -> BOOL
Rule 43    bloque -> LCBRAC estatutos RCBRAC
Rule 44    estatutos -> estatuto estatutos
Rule 45    estatutos -> e
Rule 46    estatuto -> asignacion
Rule 47    estatuto -> condicion
Rule 48    estatuto -> llamada
Rule 49    estatuto -> leer
Rule 50    estatuto -> escribir
Rule 51    estatuto -> ciclo_w
Rule 52    estatuto -> ciclo_f
Rule 53    estatuto -> regresar
Rule 54    asignacion -> variable EQ expresion SEMICOLON
Rule 55    variable -> ID variable1 variable2
Rule 56    variable1 -> DOT ID
Rule 57    variable1 -> e
Rule 58    variable2 -> LSBRAC expresion RSBRAC variable3
Rule 59    variable2 -> e
Rule 60    variable3 -> LSBRAC expresion RSBRAC
Rule 61    variable3 -> e
Rule 62    condicion -> IF LPAR expresion RPAR gotoF bloque condicion1 fill
Rule 63    gotoF -> e
Rule 64    fill -> e
Rule 65    condicion1 -> ELSE goto bloque
Rule 66    condicion1 -> e
Rule 67    goto -> e
Rule 68    llamada -> ID llamada1 LPAR llamada2 RPAR SEMICOLON
Rule 69    llamada1 -> DOT ID
Rule 70    llamada1 -> e
Rule 71    llamada2 -> expresion llamada3
Rule 72    llamada2 -> e
Rule 73    llamada3 -> COMMA expresion llamada3
Rule 74    llamada3 -> e
Rule 75    leer -> READ LPAR variable add_read generar_cuadr RPAR SEMICOLON
Rule 76    add_read -> e
Rule 77    escribir -> WRITE LPAR escribir1 RPAR SEMICOLON
Rule 78    escribir1 -> texto add_print generar_cuadr escribir2
Rule 79    escribir1 -> expresion add_print generar_cuadr escribir2
Rule 80    add_print -> e
Rule 81    escribir2 -> COMMA escribir1
Rule 82    escribir2 -> e
Rule 83    texto -> CTESTR
Rule 84    ciclo_w -> WHILE push_while LPAR expresion RPAR gotoF DO bloque return_while
Rule 85    push_while -> e
Rule 86    return_while -> e
Rule 87    ciclo_f -> FROM LPAR variable EQ expresion TO expresion RPAR DO bloque
Rule 88    regresar -> RETURN expresion SEMICOLON
Rule 89    expresion -> a_exp exp1
Rule 90    exp1 -> OR push_or a_exp pop_operador exp1
Rule 91    exp1 -> e
Rule 92    push_or -> e
Rule 93    pop_operador -> e
Rule 94    a_exp -> b_exp exp2
Rule 95    exp2 -> AND push_and b_exp pop_operador exp2
Rule 96    exp2 -> e
Rule 97    push_and -> e
Rule 98    b_exp -> c_exp exp3
Rule 99    exp3 -> LT push_lt c_exp pop_operador exp3
Rule 100   exp3 -> GT push_gt c_exp pop_operador exp3
Rule 101   exp3 -> COMP push_comp c_exp pop_operador exp3
Rule 102   exp3 -> NOTEQ push_noteq c_exp pop_operador exp3
Rule 103   exp3 -> e
Rule 104   push_lt -> e
Rule 105   push_gt -> e
Rule 106   push_comp -> e
Rule 107   push_noteq -> e
Rule 108   c_exp -> d_exp exp4
Rule 109   exp4 -> PLUS push_plus d_exp pop_operador exp4
Rule 110   exp4 -> MINUS push_minus d_exp pop_operador exp4
Rule 111   exp4 -> e
Rule 112   push_plus -> e
Rule 113   push_minus -> e
Rule 114   d_exp -> e_exp exp5
Rule 115   exp5 -> MULT push_mult e_exp pop_operador exp5
Rule 116   exp5 -> DIV push_div e_exp pop_operador exp5
Rule 117   exp5 -> e
Rule 118   push_mult -> e
Rule 119   push_div -> e
Rule 120   e_exp -> LPAR expresion RPAR
Rule 121   e_exp -> var_cte
Rule 122   e_exp -> variable
Rule 123   e_exp -> llamada
Rule 124   var_cte -> CTEI ctei
Rule 125   var_cte -> CTEF ctef
Rule 126   var_cte -> CTESTR ctestr
Rule 127   var_cte -> CTEB cteb
Rule 128   ctei -> e
Rule 129   ctef -> e
Rule 130   ctestr -> e
Rule 131   cteb -> e
Rule 132   generar_cuadr -> e
Rule 133   e -> <empty>

Terminals, with rules where they appear

AND                  : 95
ATTRIBUTES           : 7
BOOL                 : 42
CLASS                : 3
COLON                : 21 35 37
COMMA                : 27 37 73 81
COMP                 : 101
CTEB                 : 127
CTEF                 : 125
CTEI                 : 23 25 124
CTESTR               : 83 126
DIV                  : 116
DO                   : 84 87
DOT                  : 56 69
ELSE                 : 65
EQ                   : 54 87
FLOAT                : 40
FROM                 : 87
FUNCTION             : 31
GT                   : 5 100
ID                   : 1 3 5 22 30 31 35 37 55 56 68 69
IF                   : 62
INHERITS             : 5
INT                  : 39
LCBRAC               : 3 43
LPAR                 : 2 31 62 68 75 77 84 87 120
LSBRAC               : 23 25 58 60
LT                   : 5 99
MAIN                 : 2
METHODS              : 13
MINUS                : 110
MULT                 : 115
NOTEQ                : 102
OR                   : 90
PLUS                 : 109
PROGRAM              : 1
RCBRAC               : 3 43
READ                 : 75
RETURN               : 88
RPAR                 : 2 31 62 68 75 77 84 87 120
RSBRAC               : 23 25 58 60
SEMICOLON            : 1 21 54 68 75 77 88
STRING               : 41
TO                   : 87
VAR                  : 17
VOID                 : 34
WHILE                : 84
WRITE                : 77
error                : 

Nonterminals, with rules where they appear

a_exp                : 89 90
add_print            : 78 79
add_read             : 75
asign                : 7 11
asignacion           : 11 46
atributos            : 7 9
b_exp                : 94 95
bloque               : 2 31 62 65 84 87
c_exp                : 98 99 100 101 102
ciclo_f              : 52
ciclo_w              : 51
clase                : 1 3
clase1               : 3
clase2               : 3
clase3               : 3
condicion            : 47
condicion1           : 62
cteb                 : 127
ctef                 : 125
ctei                 : 124
ctestr               : 126
d_exp                : 108 109 110
declaracion          : 7 9 17 19
declaracion1         : 21 27
declaracion2         : 22
declaracion3         : 23
declaracion4         : 22
declaracion5         : 21
declaraciones        : 17 19
e                    : 4 6 8 10 12 14 16 18 20 24 26 28 32 36 38 45 57 59 61 63 64 66 67 70 72 74 76 80 82 85 86 91 92 93 96 97 103 104 105 106 107 111 112 113 117 118 119 128 129 130 131 132
e_exp                : 114 115 116
escribir             : 50
escribir1            : 77 81
escribir2            : 78 79
estatuto             : 44
estatutos            : 43 44
exp1                 : 89 90
exp2                 : 94 95
exp3                 : 98 99 100 101 102
exp4                 : 108 109 110
exp5                 : 114 115 116
expresion            : 54 58 60 62 71 73 79 84 87 87 88 120
fill                 : 62
funcion              : 1 13 15 31
funcion1             : 31
funcion2             : 31
funcion3             : 35 37
generar_cuadr        : 75 78 79
goto                 : 65
gotoF                : 62 84
leer                 : 49
llamada              : 48 123
llamada1             : 68
llamada2             : 68
llamada3             : 71 73
main                 : 1
metodos              : 13 15
pop_operador         : 90 95 99 100 101 102 109 110 115 116
programa             : 0
push_and             : 95
push_comp            : 101
push_div             : 116
push_gt              : 100
push_lt              : 99
push_minus           : 110
push_mult            : 115
push_noteq           : 102
push_or              : 90
push_plus            : 109
push_while           : 84
regresar             : 53
return_while         : 84
texto                : 78
tipo                 : 29 33 35 37
var_cte              : 121
variable             : 54 75 87 122
variable1            : 55
variable2            : 55
variable3            : 58
vars                 : 1

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON clase vars funcion main

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID SEMICOLON clase vars funcion main

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . SEMICOLON clase vars funcion main

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . clase vars funcion main
    (3) clase -> . CLASS ID clase1 LCBRAC clase2 clase3 RCBRAC clase
    (4) clase -> . e
    (133) e -> .

    CLASS           shift and go to state 6
    VAR             reduce using rule 133 (e -> .)
    VOID            reduce using rule 133 (e -> .)
    INT             reduce using rule 133 (e -> .)
    FLOAT           reduce using rule 133 (e -> .)
    STRING          reduce using rule 133 (e -> .)
    BOOL            reduce using rule 133 (e -> .)
    MAIN            reduce using rule 133 (e -> .)

    clase                          shift and go to state 5
    e                              shift and go to state 7

state 5

    (1) programa -> PROGRAM ID SEMICOLON clase . vars funcion main
    (17) vars -> . VAR declaracion declaraciones
    (18) vars -> . e
    (133) e -> .

    VAR             shift and go to state 9
    VOID            reduce using rule 133 (e -> .)
    INT             reduce using rule 133 (e -> .)
    FLOAT           reduce using rule 133 (e -> .)
    STRING          reduce using rule 133 (e -> .)
    BOOL            reduce using rule 133 (e -> .)
    MAIN            reduce using rule 133 (e -> .)

    vars                           shift and go to state 8
    e                              shift and go to state 10

state 6

    (3) clase -> CLASS . ID clase1 LCBRAC clase2 clase3 RCBRAC clase

    ID              shift and go to state 11


state 7

    (4) clase -> e .

    VAR             reduce using rule 4 (clase -> e .)
    VOID            reduce using rule 4 (clase -> e .)
    INT             reduce using rule 4 (clase -> e .)
    FLOAT           reduce using rule 4 (clase -> e .)
    STRING          reduce using rule 4 (clase -> e .)
    BOOL            reduce using rule 4 (clase -> e .)
    MAIN            reduce using rule 4 (clase -> e .)


state 8

    (1) programa -> PROGRAM ID SEMICOLON clase vars . funcion main
    (31) funcion -> . funcion1 FUNCTION ID LPAR funcion2 RPAR bloque funcion
    (32) funcion -> . e
    (33) funcion1 -> . tipo
    (34) funcion1 -> . VOID
    (133) e -> .
    (39) tipo -> . INT
    (40) tipo -> . FLOAT
    (41) tipo -> . STRING
    (42) tipo -> . BOOL

    VOID            shift and go to state 16
    MAIN            reduce using rule 133 (e -> .)
    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    STRING          shift and go to state 19
    BOOL            shift and go to state 20

    funcion                        shift and go to state 12
    funcion1                       shift and go to state 13
    e                              shift and go to state 14
    tipo                           shift and go to state 15

state 9

    (17) vars -> VAR . declaracion declaraciones
    (21) declaracion -> . declaracion1 COLON declaracion5 SEMICOLON
    (22) declaracion1 -> . ID declaracion2 declaracion4

    ID              shift and go to state 23

    declaracion                    shift and go to state 21
    declaracion1                   shift and go to state 22

state 10

    (18) vars -> e .

    VOID            reduce using rule 18 (vars -> e .)
    INT             reduce using rule 18 (vars -> e .)
    FLOAT           reduce using rule 18 (vars -> e .)
    STRING          reduce using rule 18 (vars -> e .)
    BOOL            reduce using rule 18 (vars -> e .)
    MAIN            reduce using rule 18 (vars -> e .)


state 11

    (3) clase -> CLASS ID . clase1 LCBRAC clase2 clase3 RCBRAC clase
    (5) clase1 -> . LT INHERITS ID GT
    (6) clase1 -> . e
    (133) e -> .

    LT              shift and go to state 25
    LCBRAC          reduce using rule 133 (e -> .)

    clase1                         shift and go to state 24
    e                              shift and go to state 26

state 12

    (1) programa -> PROGRAM ID SEMICOLON clase vars funcion . main
    (2) main -> . MAIN LPAR RPAR bloque

    MAIN            shift and go to state 28

    main                           shift and go to state 27

state 13

    (31) funcion -> funcion1 . FUNCTION ID LPAR funcion2 RPAR bloque funcion

    FUNCTION        shift and go to state 29


state 14

    (32) funcion -> e .

    MAIN            reduce using rule 32 (funcion -> e .)
    VOID            reduce using rule 32 (funcion -> e .)
    INT             reduce using rule 32 (funcion -> e .)
    FLOAT           reduce using rule 32 (funcion -> e .)
    STRING          reduce using rule 32 (funcion -> e .)
    BOOL            reduce using rule 32 (funcion -> e .)
    RCBRAC          reduce using rule 32 (funcion -> e .)


state 15

    (33) funcion1 -> tipo .

    FUNCTION        reduce using rule 33 (funcion1 -> tipo .)


state 16

    (34) funcion1 -> VOID .

    FUNCTION        reduce using rule 34 (funcion1 -> VOID .)


state 17

    (39) tipo -> INT .

    FUNCTION        reduce using rule 39 (tipo -> INT .)
    SEMICOLON       reduce using rule 39 (tipo -> INT .)
    COMMA           reduce using rule 39 (tipo -> INT .)
    RPAR            reduce using rule 39 (tipo -> INT .)


state 18

    (40) tipo -> FLOAT .

    FUNCTION        reduce using rule 40 (tipo -> FLOAT .)
    SEMICOLON       reduce using rule 40 (tipo -> FLOAT .)
    COMMA           reduce using rule 40 (tipo -> FLOAT .)
    RPAR            reduce using rule 40 (tipo -> FLOAT .)


state 19

    (41) tipo -> STRING .

    FUNCTION        reduce using rule 41 (tipo -> STRING .)
    SEMICOLON       reduce using rule 41 (tipo -> STRING .)
    COMMA           reduce using rule 41 (tipo -> STRING .)
    RPAR            reduce using rule 41 (tipo -> STRING .)


state 20

    (42) tipo -> BOOL .

    FUNCTION        reduce using rule 42 (tipo -> BOOL .)
    SEMICOLON       reduce using rule 42 (tipo -> BOOL .)
    COMMA           reduce using rule 42 (tipo -> BOOL .)
    RPAR            reduce using rule 42 (tipo -> BOOL .)


state 21

    (17) vars -> VAR declaracion . declaraciones
    (19) declaraciones -> . declaracion declaraciones
    (20) declaraciones -> . e
    (21) declaracion -> . declaracion1 COLON declaracion5 SEMICOLON
    (133) e -> .
    (22) declaracion1 -> . ID declaracion2 declaracion4

    VOID            reduce using rule 133 (e -> .)
    INT             reduce using rule 133 (e -> .)
    FLOAT           reduce using rule 133 (e -> .)
    STRING          reduce using rule 133 (e -> .)
    BOOL            reduce using rule 133 (e -> .)
    MAIN            reduce using rule 133 (e -> .)
    ID              shift and go to state 23

    declaracion                    shift and go to state 30
    declaraciones                  shift and go to state 31
    e                              shift and go to state 32
    declaracion1                   shift and go to state 22

state 22

    (21) declaracion -> declaracion1 . COLON declaracion5 SEMICOLON

    COLON           shift and go to state 33


state 23

    (22) declaracion1 -> ID . declaracion2 declaracion4
    (23) declaracion2 -> . LSBRAC CTEI RSBRAC declaracion3
    (24) declaracion2 -> . e
    (133) e -> .

    LSBRAC          shift and go to state 35
    COMMA           reduce using rule 133 (e -> .)
    COLON           reduce using rule 133 (e -> .)

    declaracion2                   shift and go to state 34
    e                              shift and go to state 36

state 24

    (3) clase -> CLASS ID clase1 . LCBRAC clase2 clase3 RCBRAC clase

    LCBRAC          shift and go to state 37


state 25
